cotoami_desktop/ui/assets/css/app/_flow-input.scss
section.flow-input {
  display: flex;
  flex-direction: column;
  position: relative;

  >header {
    position: relative;
    height: 40px;

    display: flex;
    flex-direction: row;

    section.posting-to {
      display: flex;
      flex-direction: row;
      justify-content: center;
      align-items: center;

      padding-top: 4px;
      padding-left: 10px;
      padding-right: 10px;

      font-size: 14px;
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;

      img.node-icon {
        width: 18px;
        height: 18px;
        border-radius: 4px;
        margin-right: 8px;
      }
    }

    section.coto-type-switch {
      margin-top: 8px;
      height: 33px;

      display: flex;
      flex-direction: row;

      button {
        display: block;
        font-size: 13px;
        padding-left: 20px;
        padding-right: 20px;

        border-top: 1px solid var(--pane-border-color);
        border-left: 1px solid var(--pane-border-color);

        border-radius: var(--border-radius) var(--border-radius) 0 0;

        &.new-coto {
          margin-left: 8px;
        }

        &.new-cotonoma {
          border-right: 1px solid var(--pane-border-color);
        }

        span.material-symbols {
          font-size: 16px; // use px here to fix the icon size
          margin-right: 5px;
          vertical-align: sub;
        }

        .label {
          opacity: 0.5;
        }

        &:hover {
          background-color: var(--hover-background-color);
        }

        &:disabled {
          opacity: 1;
          background-color: var(--input-background-color);

          .label {
            opacity: 1;
          }
        }
      }
    }

    button.tool:disabled {
      opacity: 0.5;
    }
  }

  .coto-form-with-media {
    .separator-inner {
      border-style: none !important;
    }
  }

  div.cotonoma-form {
    border-bottom: 1px solid var(--pane-border-color);
  }

  section.geolocation {
    text-align: center;
    font-size: 0.9rem;

    span.material-symbols {
      vertical-align: middle;
    }

    span.label {
      margin-left: 4px;
    }

    span.value {
      margin-right: 4px;
      font-size: 0.8rem;
      opacity: 0.6;
    }
  }

  div.post {
    margin-bottom: 3rem;
    padding: 8px 0;

    section.validation-error {
      padding-left: 1rem;
      padding-bottom: 8px;
    }

    section.post {
      display: flex;
      flex-direction: row;
      align-items: center;

      div.fold-button {
        padding-left: 4px;

        button.fold {
          opacity: .5;

          &:hover {
            opacity: 1;
          }

          span.material-symbols {
            font-size: 24px;
          }
        }
      }

      address.poster {
        margin: 0;
        padding: 0;
        padding-left: 10px;
        color: var(--muted-color);

        span.name {
          vertical-align: baseline;
        }
      }

      div.buttons {
        flex: 1;

        display: flex;
        flex-direction: row;
        justify-content: end;

        padding-right: 10px;

        button {
          width: auto;
          height: 36px;
          padding: 5px 12px;
        }

        button.preview {
          margin-right: 5px;
        }
      }
    }
  }

  &.folded {
    div.coto-form-with-media {

      // hide section.media-preview
      &>div.split-pane-primary,
      &>div.separator {
        display: none;
      }
    }

    div.coto-form-pane {
      height: 2.5rem !important;

      input.summary {
        display: none;
      }

      textarea {
        overflow: hidden;
      }

      div.input-image {
        display: none;
      }
    }

    ul.attributes {
      display: none;
    }

    div.post {
      display: none;
    }
  }
}

